--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="backgroundopacity">#AB363535</color>
+    <color name="startcolorgradient"  >#443C20</color>
+    <color name="endcolorgradient"  >#e8a564</color>
+    <color name="fbcolor"        >#3b5998</color>
+    <color name="tintlogocolor"   >#AC7A4A</color>
+    <color name="goooglecolor"     >#C3463B</color>
 </resources>
