--- a/app/src/main/res/drawable/btn_gradient.xml
+++ b/app/src/main/res/drawable/btn_gradient.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
     <gradient
 
-        android:startColor="@color/black"
-
-
-
-    />
+        android:startColor="#443C20"
+        android:endColor="#e8a564" />
+    <corners
+        android:radius="6dp"
+        />
 
 
 </shape>
