--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -5,10 +5,9 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUp_Activity"
-    android:orientation="vertical">
-
-
+    tools:context=".Sign_In_Activity"
+    android:orientation="vertical"
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -28,55 +27,31 @@
                 android:layout_marginBottom="15dp"
                 android:orientation="vertical">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/profile_image"
+                <ImageView
+                    android:id="@+id/imageView"
                     android:layout_width="match_parent"
-                    android:layout_height="96dp"
-                    android:src="@drawable/profile"
-                    app:civ_border_color="#FF000000"
-                    app:civ_border_width="2dp" />
+                    android:layout_height="120dp"
+                    android:layout_marginTop="10dp"
+                    android:background="#00313535"
+                    android:padding="8dp"
+                    app:srcCompat="@drawable/chef"
+                    app:tint="@color/tintlogocolor" />
 
                 <TextView
-                    android:id="@+id/textView"
+                    android:id="@+id/cafeHouse"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
+                    android:layout_marginBottom="30dp"
+                    android:background="#03B37171"
+                    android:fontFamily="cursive"
                     android:gravity="center"
-                    android:text="Upload Image"
-                    android:textColor="#050505"
-                    android:textStyle="bold" />
+                    android:padding="8dp"
+                    android:text="Cafe House"
+                    android:textColor="@color/endcolorgradient"
+                    android:textSize="60sp" />
 
-                <View
-                    android:id="@+id/view"
-                    android:layout_width="90dp"
-                    android:layout_height="2dp"
-                    android:layout_gravity="center"
-                    android:background="#090909" />
 
-                <EditText
-                    android:id="@+id/editTextText"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="20dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/backgroudeditview"
-                    android:ems="10"
-                    android:gravity="center"
-                    android:hint="User Name"
-                    android:inputType="text"
-                    android:padding="10dp" />
-
-                <EditText
-                    android:id="@+id/editTextPhone"
-                    android:layout_width="match_parent"
-                    android:layout_height="50dp"
-                    android:layout_marginBottom="20dp"
-                    android:background="@drawable/backgroudeditview"
-                    android:ems="10"
-                    android:gravity="center"
-                    android:hint="+880 01401235687"
-                    android:inputType="phone"
-                    android:padding="10dp" />
 
                 <EditText
                     android:id="@+id/editTextTextEmailAddress"
@@ -108,7 +83,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="20dp"
                     android:background="@drawable/btn_gradient"
-                    android:text="Register"
+                    android:text="Sign In"
                     android:textColor="#F4F3F3"
                     android:textSize="18sp"
                     android:textStyle="bold" />
@@ -187,7 +162,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="40dp"
                     android:gravity="center"
-                    android:text="Already Have Account ? Login"
+                    android:text="Want to Create Account ?"
                     android:textStyle="bold" />
 
 
